--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,12 +16,12 @@
           <li><%= link_to "Log In", new_user_session_path %></li>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% else %>
+        <li><%= "CART" %></li> 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <%= current_user.has_profile? ? current_user.full_name_user : current_user.email  %> <span class="caret"></span></a>
 
           <ul class="dropdown-menu">
-
 
             <% if current_user.has_profile? %>
               <li><%= link_to "Edit Profile", edit_profile_path(current_user.profile) %></li>
