Adjust index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+//  .nav .nav-pills .nav-stacked li a{
+//    display: block;
+//    width: 40px;
+// }
