--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to "Petshop", root_path, class: "navbar-brand" %>
+      <span class="glyphicon glyphicon-gift header-icon" aria-hidden="true"></span>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -16,7 +17,7 @@
           <li><%= link_to "Log In", new_user_session_path %></li>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% else %>
-        <li><%= "CART" %></li> 
+        <li><%= "CART" %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <%= current_user.has_profile? ? current_user.full_name_user : current_user.email  %> <span class="caret"></span></a>
