Created show page for categories

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,7 @@
         <% @categories.each do |category| %>
         <div class="row">
           <div class="col-sm-6 col-md-4">
-            <h4>  <%= category.name %></h4>
+            <h4>  <%= link_to  category.name %></h4>
           </div>
           <div class="thumbnail">
 
