Fix menu and install Cloudinary and Carrierwave gems

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-//  .nav .nav-pills .nav-stacked li a{
-//    display: block;
-//    width: 40px;
-// }
+div.species{
+    width: 300px;
+    float:left;
+}
+
+div.page-header{
+  
+}
