--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Lovely Pets <small>Subtext for head</small></h1>
 </div>
 
-<div class="row-md-4">
+<div class="species">
   <ul class="nav nav-pills nav-stacked">
     <li role="presentation" class="active"><a href="#">Cats</a></li>
     <li role="presentation"><a href="#">Dogs</a></li>
@@ -10,29 +10,3 @@
     <li role="presentation"><a href="#">Hedgehog</a></li>
   </ul>
 </div>
-
-<!-- <div class="row">
-  <div class="col-md-3">
-    <ul class="sidebar-list">
-
-
-    </ul>
-  </div>
-  <div class="col-md-9">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-      <h2>Categories</h2>
-      </div>
-      <div class="panel-body"> -->
-
-        <!-- <% @categories.each do |category| %>
-        <div class="row">
-          <div class="col-sm-6 col-md-4">
-            <h4>  <%= link_to category.name %></h4>
-          </div>
-          <div class="thumbnail">
-
-
-          </div>
-        </div>
-        <% end %> -->
