--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,10 +2,15 @@
 @import "bootstrap";
 
 div.species{
-    width: 300px;
+    width: 200px;
     float:left;
+    text-align: center;
 }
 
-div.page-header{
-  
-}
+// div.page-header{
+//   width: 100%;
+//   height: 100%;
+//   padding: 100px;
+//   background: url('') center center no-repeat;
+//   background-size: cover;
+// }
