--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,10 +5,8 @@
 
 <div class="species">
   <ul class="nav nav-pills nav-stacked">
-    <li role="presentation" class="active"><a href="#">Cats</a></li>
-    <li role="presentation"><a href="#">Dogs</a></li>
-    <li role="presentation"><a href="#">Birds</a></li>
-    <li role="presentation"><a href="#">Hedgehog</a></li>
+    <% @categories.each do |category| %>
+    <li role="presentation" ><%= link_to category.name, category_path(category.id) %></li>
+    <% end %>
   </ul>
 </div>
-
