Install FactoryGirl, Faker and define factories, write tests

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
     <div class="thumbnail">
       <%= image_tag pet.remote_image_url %>
       <div class="caption">
-        <h3><% pet.name %></h3>
+        <h3><%= pet.name %></h3>
         <p>
           <ul>
             <li>Species: <%= pet.species %> </li>
