Add changes to shopping cart

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,7 +13,7 @@
             <li>Price: <%= pet.price %> </li>
           </ul>
         </p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+        <p><a href="#" class="btn btn-primary" role="button">Add to cart</a></p>
       </div>
     </div>
   <% end %>
