--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,20 +1,26 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
+@import url('https://fonts.googleapis.com/css?family=Lobster+Two:400,700');
 
 div.species{
-    width: 200px;
-    float:left;
-    text-align: center;
+  width: 100%;
+  float:left;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-// div.page-header{
-//   width: 100%;
-//   height: 100%;
-//   padding: 100px;
-//   background: url('') center center no-repeat;
-//   background-size: cover;
-// }
+div.banner{
+  margin: auto;
+  width: 100%;
+  height: 300px;
+  text-align: left;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
+  font-family:'Lobster Two', cursive;
+  background: url(http://res.cloudinary.com/di7m4tijz/image/upload/v1510926370/banner_cb27ux.jpg) no-repeat;
+  background-position: center;
+}
+
 
 .header-icon {
   top: 17px;
